--- a/views/table.ejs
+++ b/views/table.ejs
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title> My Shop </title>
+	<title>Arabic Tweet Analyser</title>
 
 	<!-- Mobile Specific Meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
